# EasyDiffractionLib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  README.rst  Untitled.ipynb  fort.1  prettierrc.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test2.py  test3.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build-docs.yml  ci-testing.yaml  codeql-analysis.yml  delete-old-runs.yml  main-ci.yaml  ossar-analysis.yml  pypi-publish.yml  pypi_publish.yml  python-ci.yml  release-drafter.yml  self_publish_alpha.yml  test-and-package.yaml  test-code-notebooks-package.yaml  test-code.yaml  test-ipynb.yml  test-package.yaml  test.yml  unit_test.yml  verify-pr-labels.yml  verify_pr_labels.yml
Notebooks/: FittingData.ipynb  FittingPowder1D.ipynb  FittingPowder1DCW.ipynb  PbSO4.cif
Notebooks/PbSO4/: FittingPowder1D.ipynb
binder/: postBuild
docs/: analysis.md  dictionaries.md  easyscience.md  experiment.md  getting-started.md  glossary.md  index.md  mkdocs.yml  model.md  project-structure.md
docs/dev/diagrams/: classes.md
docs/dictionaries/: _atom_site.md  _cell.md  _diffrn_radiation.md  _diffrn_radiation_wavelength.md  _exptl_crystal.md  _pd_background.md  _pd_calib.md  _pd_instr.md  _pd_meas.md  _pd_phase.md  _space_group.md
docs/how-to-use/: index.md
easyDiffractionLib/: Job.py  Jobs.py  Runner.py  __init__.py  interface.py  main.py  model.py  sample.py
easyDiffractionLib/Calculators/: CFML.py  GSASII.py  __init__.py  cryspy.py
easyDiffractionLib/Elements/Backgrounds/: Background.py  Factorial.py  Linear.py  Point.py
easyDiffractionLib/Elements/Experiments/: Experiment.py  Pattern.py
easyDiffractionLib/Elements/Instruments/: Instrument.py
easyDiffractionLib/Interfaces/: CFML.py  CFML_X.py  CFML_xray.py  GSASII.py  __init__.py  cryspy.py  cryspyV2.py  interfaceTemplate.py  pdffit2.py  types.py
easyDiffractionLib/Profiles/: Analysis.py  Container.py  Experiment.py  JobType.py  P1D.py  Sample.py  common.py
easyDiffractionLib/calculators/: CFML.py  GSASII.py  cryspy.py  pdffit2.py
easyDiffractionLib/components/: phase.py  polarization.py  site.py
easyDiffractionLib/elements/Backgrounds/: Background.py  Factorial.py  Point.py
easyDiffractionLib/elements/Experiments/: Experiment.py  Pattern.py
easyDiffractionLib/graphics/: interactive.py
easyDiffractionLib/io/: cif.py  cryspy_parser.py
easydiffraction/: Job.py  Jobs.py  Runner.py  __init__.py  interface.py  main.py  sample.py  utils.py
easydiffraction/Interfaces/: CFML.py  GSASII.py  __init__.py  cryspy.py  cryspyV2.py  interfaceTemplate.py  pdffit2.py  types.py
easydiffraction/Profiles/: Analysis.py  Container.py  Experiment.py  JobType.py  P1D.py  Sample.py  __init__.py  common.py
easydiffraction/calculators/: CFML.py  GSASII.py  cryspy.py  wrapper_base.py  wrapper_factory.py
easydiffraction/components/: phase.py  polarization.py  site.py
easydiffraction/io/: cif.py  cif_reader.py  cryspy_parser.py  download.py  helpers.py
examples/: Change-minimizer.ipynb  Change_minimizer.ipynb  CreateSample.ipynb  Define-experiment.ipynb  Define-model.ipynb  Fitting-emcee_pd-neut-cwl_LBCO-HRPT.ipynb  Fitting.ipynb  FittingPdCw1d.ipynb  Fitting_PD-NEUT-CW_LBCO-HRPT.ipynb  Fitting_PD-NEUT-TOF_NCAF-WISH.ipynb  Fitting_PD-NEUT-TOF_Si-SEPD.ipynb  Fitting_TOF.ipynb  Fitting_TOF_xye.ipynb  Fitting_multiphase.ipynb  Fitting_pd-neut-cwl_LBCO-HRPT.ipynb  Fitting_pd-neut-tof_NCAF-WISH.ipynb  Fitting_pd-neut-tof_Si-SEPD.ipynb  Polarized.ipynb  Simulation.ipynb  Simulation_XRAY_NaCl.ipynb  Simulation_pd-neut-cwl_NaCl.ipynb  Simulation_pd-xray_NaCl.ipynb  cfml_1.py  d1a.cif  diamond_exp.xye  structure_polarized.cif  wish.cif  xray_profile.py
examples/Fitting_PD-CW_La0.5Ba0.5CoO3-HRPT@PSI/: fitting.ipynb  fitting.py
examples/Fitting_PD-TOF_Si-SEPD@Argonne/: fitting.py  si.cif
examples/PDF/: Calculate_PDF_Profile.ipynb  Calculate_PDF_Profile_Ni.ipynb  Fitting_PDF_Profile.ipynb  Fitting_PDF_Profile_Ni.ipynb  Fitting_PDF_Profile_Si.ipynb  Ni.cif  Ni_fitting.py  Ni_profile.py
examples/data/: d1a.cif  lbco.cif  lbco_adp.cif  ncaf.cif  wish.xye
examples/old/: multiphase.cif  structure_polarized.cif
examples_old/: Fitting_TOF.ipynb  Fitting_multiphase.ipynb  Polarized.ipynb  Simulation_xray.ipynb  d1a.cif  ncaf.cif
examples_old/Fitting_PD-CW_La0.5Ba0.5CoO3-HRPT@PSI/: fitting.py
examples_old/Fitting_PD-TOF_Si-SEPD@Argonne/: fitting copy.py  sepd.xye
examples_old/PDF/: Calculate_PDF_Profile_Ni.ipynb  Fitting_PDF_Profile_Ni.ipynb  Fitting_PDF_Profile_Si.ipynb
examples_old/PDF2/: Calculate_PDF_Profile.ipynb  Fitting_PDF_Profile.ipynb  Ni.cif  Ni_fitting.py
examples_old/advanced/: refinement_bumps_dream.ipynb  refinement_emcee.ipynb
examples_unsorted/: diamond_phase.cif
examples_unsorted/Fitting_PD-CW_La0.5Ba0.5CoO3-HRPT@PSI/: hrpt.xye
examples_unsorted/PDF2/: Fitting_PDF_Profile.ipynb  Ni_fitting.py
src/easydiffraction/: __init__.py  job.py  main.py  sample.py  utils.py
tests/: CreateSample.ipynb  FittingData.ipynb  FittingData_CFML.ipynb  WorkedExample2.ipynb  fit_script.py  test1.py  test3.py  test4.py  test5.py  workedExample1.ipynb  xarray_integration.ipynb  xarray_test.py
tests/integration_tests/: FittingData.ipynb  FittingData_CFML-xarrays.ipynb  FittingData_CFML.ipynb  WorkedExample2.ipynb  fit_script.py  test1.py  test3.py  workedExample1.ipynb  xarray_test.ipynb
tests/resources/: scipp.cif
tests/unit_tests/: test_Job.py  test_Jobs.py  test_Runner.py  test_interface.py  test_sample.py
tests_old/integration_tests/: FittingData.ipynb  SrTiO3.cif  fit_script.py  test1.py  test3.py  workedExample1.ipynb  xarray_test.ipynb
tests_old/unit_tests/: test_Runner.py  test_interface.py
tools/: build_docs.sh  cleanup_docs.sh  code_quality.sh  install_deps.sh  linting_and_formatting.sh  prepare_docs.sh  run_notebooks.sh  run_tests.sh
tools/Scripts/: Config.py  RelinkCrysfml.py  generate_html.py  linting_and_formatting.sh
(+87 files in other folders)
