###############################
# Configuration for the project
###############################

[project]
name = 'easydiffraction'
dynamic = ['version']  # use versioningit to manage the version
description = 'Making diffraction data analysis and modelling easy'
authors = [
    { name = 'EasyDiffraction contributors', email = 'support@easydiffraction.org' }
]
readme = 'README.md'
license = { file = 'LICENSE' }
classifiers = [
    'Topic :: Scientific/Engineering',
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
requires-python = '>=3.9,<3.13'
dependencies = [
    'cryspy',  # for calculations of diffraction patterns
    'pooch',  # for data fetching
    'easyscience',  # the base library of the EasyScience framework
    'easycrystallography',  # crystallography tools of the EasyScience framework
]

[project.optional-dependencies]
dev = [
    'build',  # for building the package
    'pytest',  # for testing
    'pytest-xdist',  # for parallel testing
    'pytest-cov',  # for coverage
    'ruff',  # for linting
    'nbmake',  # for building notebooks
    'nbqa',  # for linting notebooks
    'jinja2',  # for templating
    'versioningit',  # for versioning
]
charts = [
    'darkdetect',# for dark mode detection
    'plotly',    # for interactive plots
    'py3Dmol',  # for visualisation of crystal structures
    'pandas',  # for displaying tables in juptyer notebooks
]

[project.urls]
homepage = 'https://easydiffraction.org'
documentation = 'https://docs.easydiffraction.org/lib'
source = 'https://github.com/EasyScience/EasyDiffractionLib'
tracker = 'https://github.com/EasyScience/EasyDiffractionLib/issues'

############################
# Build system configuration
############################

# Build system 'hatch' -- Python project manager
# https://hatch.pypa.io/

# Versioning system 'versioningit' -- Versioning from git tags
# https://versioningit.readthedocs.io/

[build-system]
build-backend = 'hatchling.build'
requires = [
  'hatchling',
  'versioningit'
]

#############################
# Configuration for hatchling
#############################

[tool.hatch.build.targets.wheel]
packages = ['src/easydiffraction']

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = 'versioningit'

################################
# Configuration for versioningit
################################

[tool.versioningit.format]
distance = '{base_version}.post{distance}'  # Example: 1.2.3.post42
dirty = '{base_version}'  # Example: 1.2.3
distance-dirty = '{base_version}.post{distance}'  # Example: 1.2.3.post42

########################
# Configuration for ruff
########################

# 'ruff' -- Python linter and code formatter
# https://docs.astral.sh/ruff/rules/

[tool.ruff]
exclude = [
  'examples',
  'examples_old',
  'tests'
]
indent-width = 4
line-length = 127

[tool.ruff.format]
docstring-code-format = true  # Whether to format code snippets in docstrings
indent-style = 'space'  # PEP 8 recommends using spaces over tabs
line-ending = 'lf'  # Line endings will be converted to \n
quote-style = 'single'  # But double quotes in docstrings (PEP 8, PEP 257)

[tool.ruff.lint]
select = [
    'E9', 'F63', 'F7', 'F82',  # flake8 settings from existing CI setup
    'E', 'W',  # pycodestyle
    'F',  # Pyflakes
    'I',  # isort
    'S',  # flake8-bandit
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
# allow asserts in test files
'*test_*.py' = ['S101']

#[tool.ruff.lint.pycodestyle]
#max-line-length = 79  # https://peps.python.org/pep-0008/#maximum-line-length
#max-doc-length = 72  # https://peps.python.org/pep-0008/#maximum-line-length
